"WDS Set LTE Attach PDN List" indication does not have the Result TLV 0x02
2023-01-10T12:42:05.087809Z DEBUG ModemManager[2461]: <dbg> [qrtr://0] received message...
<<<<<< RAW:
<<<<<< length = 17
<<<<<< data = 01:10:00:00:01:01:04:75:00:93:00:04...
2023-01-10T12:42:05.088098Z DEBUG ModemManager[2461]: <dbg> [qrtr://0] received generic indication (translated)...
<<<<<< QMUX:
<<<<<< length = 16
<<<<<< flags = 0x00
<<<<<< service = "wds"
<<<<<< client = 1
<<<<<< QMI:
<<<<<< flags = "indication"
<<<<<< transaction = 117
<<<<<< tlv_length = 4
<<<<<< message = "Set LTE Attach PDN List" (0x0093)
<<<<<< TLV:
<<<<<< type = "Action Result" (0x01)
<<<<<< length = 1
<<<<<< value = 01
<<<<<< translated = yes
2023-01-10T12:42:05.090123Z WARNING ModemManager[2461]: <wrn> Couldn't parse 'Set LTE Attach PDN List' indication: Couldn't get the mandatory Result TLV: TLV 0x02 not found
This is a bug in the JSON database.